# WorldClassicsJP

./: .gitignore  CHANGELOG.md  QandA.md  README.md  REVIEW_REPORT.md  SPEC.md  UI.md  class.md  config.yaml.template  index.html  pyproject.toml  rss.xml  sequence.md  sitemap.xml  ui.html  usecase.md
about/: index.html
authors/: index.html
authors/charlotte-perkins-gilman/: index.html
authors/edgar-allan-poe/: index.html
authors/h-g-wells/: index.html
authors/lewis-carroll/: index.html
authors/mary-shelley/: index.html
authors/oscar-wilde/: index.html
authors/rudyard-kipling/: index.html
contact/: index.html
data/: state.json  works_master.json
privacy-policy/: index.html
scripts/: simulate_pipeline.py
src/worldclassicsjp/: __init__.py  exceptions.py  image_job.py  pipeline.py  preprocessor.py  publisher.py  quality_checker.py  run.py  translator.py
templates/: translate_prompt.md
tests/: conftest.py  test_image_job.py  test_pipeline.py  test_preprocessor.py  test_publisher.py  test_publisher_pages.py  test_quality_checker.py  test_translator.py
tests/test_models/: test_config.py  test_run_log.py  test_state.py  test_state_lock.py  test_works_master.py
works/alice-in-wonderland/: index.html
works/frankenstein/: index.html
works/the-importance-of-being-earnest/: index.html
works/the-jungle-book/: index.html
works/the-raven/: index.html
worldclassicsjp_codex_instructions/: ADDITIONAL_IMPROVEMENTS.md  CODEX_CLI_INSTRUCTIONS.md  DATA_MODEL.md  DESIGN_FIXES.md  IMPLEMENTATION_PLAN.md  README.md  RUN_EXAMPLES.md  STATE_MACHINE.md
(+24 files in other folders)
